log/build_2021-11-14_22-47-53/client/stderr.log
  File "/home/dave/team/test_ws/install/client/lib/python3.6/site-packages/client/client_node_setter.py", line 70
    self.future = self.cli.call_async(self.req)
       ^
SyntaxError: invalid syntax

